--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Homework 1</title>
 </head>
 <body>
-
-
+     <div align="center">學<p>HTML</p>好好玩</div>
 
 </body>
 </html>
