--- a/index3.html
+++ b/index3.html
@@ -3,31 +3,28 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Homework 2</title>
+    <title>Homework 3</title>
 </head>
 
 <body>
     <div>
         <table border="1">
             <tr>
-                <td>一起看看小王子留給我們與人生的六個關係練習</td>
+                <td rowspan="2">一起看看小王子留給我們與人生的六個關係練習</td>
             </tr>
             <tr>
-                <td>與自己的關係：每個人都有自己的孤單課題</td>
+                <td rowspan="2">與自己的關係</td>
+                <td>每個人都有自己的孤單課題</td>
+                <td>你不需要變成你不喜歡的大人</td>
             </tr>
             <tr>
-                <td>與自己的關係：你不需要變成你不喜歡的大人</td>
+                <td rowspan="2">與愛人的關係</td>
+                <td>從心甘情願豢養與被豢養開始</td>
+                <td>因為他是你的玫瑰</td>
             </tr>
             <tr>
-                <td>與愛人的關係：從心甘情願豢養與被豢養開始</td>
-            </tr>
-            <tr>
-                <td>與愛人的關係：因為他是你的玫瑰</td>
-            </tr>
-            <tr>
-                <td>與世界的關係：用「心」去尋覓你笑著的理由</td>
-            </tr>
-            <tr>
+                <td rowspan="2">與世界的關係</td>
+                <td>用「心」去尋覓你笑著的理由</td>
                 <td>與世界的關係：分離的時候，學會道別</td>
             </tr>
         </table>
