作業2 - 標題更改

--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Homework 2</title>
+    <title>唐素玲的作業 - Homework 2</title>
 </head>
 <body>
     <div>
