--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Homework 1</title>
+    <title>唐素玲的作業 - Homework 1</title>
 </head>
 <body>
      <div align="center">學<p>HTML</p>好好玩</div>
