--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
         <p>然後他又回到狐狸那裡。</p>
         <p>「再見了！」小王子說。</p>
         <p>「再見了！」狐狸說。</p>
-        <blockquote>「我的秘密很簡單：<em>唯有心才能看得清楚，眼睛是看不到真正重要的東西的。」</em></blockquote>
+        <blockquote>「我的秘密很簡單：<strong>唯有心才能看得清楚，眼睛是看不到真正重要的東西的。」</strong></blockquote>
         <p>小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」</p>
     </div>
 </body>
